RESOLVED FIXED104426
GC3Dintptr and GC3Dsizeiptr typedefs incorrect for Win64
https://bugs.webkit.org/show_bug.cgi?id=104426
Summary GC3Dintptr and GC3Dsizeiptr typedefs incorrect for Win64
Jonathan Liu
Reported 2012-12-07 18:45:49 PST
The GC3Dintptr and GC3Dsizeiptr typedefs in Source/WebCore/platform/graphics/GraphicsTypes3D.h are incorrect for Win64 as LLP64 is used there. This would result in compile error due to narrowing conversion of 64-bit pointer to signed long int which is 32-bit.
Attachments
Patch (1.37 KB, patch)
2012-12-07 18:50 PST, Jonathan Liu
buildbot: commit-queue-
Patch (1.43 KB, patch)
2012-12-07 19:29 PST, Jonathan Liu
no flags
Patch (1.37 KB, patch)
2012-12-07 19:51 PST, Jonathan Liu
no flags
Jonathan Liu
Comment 1 2012-12-07 18:50:19 PST
Build Bot
Comment 2 2012-12-07 19:07:51 PST
Peter Beverloo (cr-android ews)
Comment 3 2012-12-07 19:22:59 PST
Comment on attachment 178323 [details] Patch Attachment 178323 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/15189528
Jonathan Liu
Comment 4 2012-12-07 19:29:05 PST
Jonathan Liu
Comment 5 2012-12-07 19:51:39 PST
Simon Hausmann
Comment 6 2012-12-10 03:18:03 PST
For reference, this is a bug in the Khronos headers, where this definition comes from. The bug is also tracked upstream at https://www.khronos.org/bugzilla/show_bug.cgi?id=525
WebKit Review Bot
Comment 7 2012-12-10 03:30:45 PST
Comment on attachment 178329 [details] Patch Clearing flags on attachment: 178329 Committed r137129: <http://trac.webkit.org/changeset/137129>
WebKit Review Bot
Comment 8 2012-12-10 03:30:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.